--- a/src/pages/internship.html
+++ b/src/pages/internship.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Portfolio Nele De Bruycker" />
   <meta name="keywords" content="Portfolio, Nele De Bruycker, Nele, Deviner, Web design, development, UI, UX" />
-  <title>Nele | Fjällräven</title>
+  <title>Nele | Internship</title>
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicons/apple-icon-72x72.png">
@@ -68,13 +68,13 @@
   </header>
   <main>
     <header>
-      <h1 class="detail__title">Fjällräven</h1>
-      <p class="">Design of a concept website for three particular backpacks.</p>
+      <h1 class="detail__title">Internship at Little Miss Robot</h1>
+      <p class="">My three months of internship in 40”.</p>
     </header>
 
     <div class="detail__info">
-      <div class="detail__header-img detail__header-img--fjallraven">
-        <img src="/assets/img/04_fjallraven-overview.png" alt="logo LMR">
+      <div class="detail__header-img detail__header-img--internship">
+        <img src="/assets/img/01_internship-overview.png" alt="logo LMR">
       </div>
 
       <dl>
@@ -84,28 +84,22 @@
         </div>
         <div>
           <dt>Category</dt>
-          <dd>Concept and design</dd>
+          <dd>Design and development</dd>
         </div>
         <div>
           <dt>Client</dt>
-          <dd>School</dd>
+          <dd>School / Little Miss Robot</dd>
         </div>
         <div>
           <dt>Link</dt>
-          <dd><a href="https://projects.invisionapp.com/share/9E92SG4YS#/screens/199166518" target="blank">Online prototype</a></dd>
+          <dd><a href="https://www.littlemissrobot.com" target="blank" >Website Little Miss Robot</a></dd>
         </div>
       </dl>
 
     </div>
-    <p class="detail__text">
-    <strong>FjällRäven has noticed that they are still unknown to some of their target groups and so. Therefore, they want to set up a promotional action where a part of their gamma will be placed in the spotlight.</strong> We needed to create a fresh product website featuring a range of fascinating features. The user had to be well informed and driven to buy the product. We had to choose between 2 themes 'Back to school' and 'City Explorer'.<br/><br/>
-
-    I chose for the 'City Explorer' collection which included 2 backpacks and a totebag. For this collection I focused on people who like to go on a city trip, both men as women. <br/>After some research I found that these people wanted to know practical things about the bags, so I highlighted some features which are important for going on a citytrip. Like the safety of the tote bag, the flexibility, the weight...<br/><br/>
-    Besides the practical things of the bags, I wanted to implement a fun thing for the custumors of these bags. My idea was to create a platform where customers can upload a picture with there bag and add the place where they have been with their bag. Other people can see on a map where Fjällräven bags have been, plus I putted the numbers of how far Fjällräven has travelled with his customers.
-    </p>
-
-    <img class="detail__img" src="/assets/img/04_fjallraven-detail01.png" alt="fjallraven home" />
-    <img class="detail__img" src="/assets/img/04_fjallraven-detail02.png" alt="fjallraven detail" />
+    <p class="detail__text"><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</strong> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br/><br/>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <iframe src="https://player.vimeo.com/video/273562742" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </main>
   <footer>
     &copy; Nele De Bruycker
