--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,21 @@
   <meta name="description" content="Portfolio Nele De Bruycker" />
   <meta name="keywords" content="Portfolio, Nele De Bruycker, Nele, Deviner, Web design, development, UI, UX" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon.ico/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon.ico/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon.ico/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/assets/favicon.ico/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/assets/favicon.ico/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/assets/favicon.ico/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/assets/favicon.ico/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/favicon.ico/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon.ico/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/assets/favicon.ico/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon.ico/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon.ico/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon.ico/favicon-16x16.png">
-  <link rel="manifest" href="/assets/favicon.ico/manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="assets/favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/assets/favicon.ico/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -88,9 +87,9 @@
         <div class="work__item__image work__item__image--internship">
           <img src="/assets/img/01_internship-overview.png" alt="Logo Little Miss Robot">
         </div>
-        <div>
-          <h2 class="work__item__title">Internship at Little Miss Robot</h2>
-          <p class="work__item__text">My three months of internship in 40”.</p>
+        <div class="work__item__explain">
+          <h2>Internship at Little Miss Robot</h2>
+          <p>My three months of internship in 40”.</p>
         </div>
       </article>
 
@@ -99,9 +98,9 @@
         <div class="work__item__image work__item__image--stranger">
           <img src="/assets/img/02_stranger-overview.png" alt="Stranger Spaces">
         </div>
-        <div>
-          <h2 class="work__item__title">Stranger Spaces</h2>
-          <p class="work__item__text">My three months of internship in 40”.</p>
+        <div class="work__item__explain">
+          <h2>Stranger Spaces</h2>
+          <p>Experimental web with VR and deep learning.</p>
         </div>
       </article>
 
@@ -110,9 +109,9 @@
         <div class="work__item__image work__item__image--meditea">
           <img src="/assets/img/03_meditea-overview.png" alt="Meditea">
         </div>
-        <div>
-          <h2 class="work__item__title">Stranger Spaces</h2>
-          <p class="work__item__text">My three months of internship in 40”.</p>
+        <div class="work__item__explain">
+          <h2>Meditea</h2>
+          <p>Abnormal app design about growing plants for meditation and tea ceremonies</p>
         </div>
       </article>
 
@@ -121,9 +120,9 @@
         <div class="work__item__image work__item__image--fjallraven">
           <img src="/assets/img/04_fjallraven-overview.png" alt="Fjallraven">
         </div>
-        <div>
-          <h2 class="work__item__title">Stranger Spaces</h2>
-          <p class="work__item__text">My three months of internship in 40”.</p>
+        <div class="work__item__explain">
+          <h2>Fjällräven</h2>
+          <p>Design of a concept website for three particular backpacks.</p>
         </div>
       </article>
     </section>
