--- a/src/pages/stranger.html
+++ b/src/pages/stranger.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Portfolio Nele De Bruycker" />
   <meta name="keywords" content="Portfolio, Nele De Bruycker, Nele, Deviner, Web design, development, UI, UX" />
-  <title>Nele | Fjällräven</title>
+  <title>Nele | Stranger Spaces</title>
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicons/apple-icon-72x72.png">
@@ -68,23 +68,24 @@
   </header>
   <main>
     <header>
-      <h1 class="detail__title">Fjällräven</h1>
-      <p class="">Design of a concept website for three particular backpacks.</p>
+      <h1 class="detail__title">Stranger Spaces</h1>
+      <p class="">Experimental web with VR and deep learning.</p>
     </header>
 
     <div class="detail__info">
-      <div class="detail__header-img detail__header-img--fjallraven">
-        <img src="/assets/img/04_fjallraven-overview.png" alt="logo LMR">
+      <div class="detail__header-img detail__header-img--stranger">
+        <img src="/assets/img/02_stranger-overview.png" alt="Stranger spaces">
       </div>
 
       <dl>
         <div>
           <dt>Members</dt>
-          <dd>Nele De Bruycker</dd>
+          <dd>Nele De Bruycker, <a href="https://www.lottebijlsma.be">Lotte Bijlsma</a>
+          </dd>
         </div>
         <div>
           <dt>Category</dt>
-          <dd>Concept and design</dd>
+          <dd>Experimental web</dd>
         </div>
         <div>
           <dt>Client</dt>
@@ -92,20 +93,21 @@
         </div>
         <div>
           <dt>Link</dt>
-          <dd><a href="https://projects.invisionapp.com/share/9E92SG4YS#/screens/199166518" target="blank">Online prototype</a></dd>
+          <dd><a href="https://student.howest.be/nele.de.bruycker/20172018/EXW/" target="blank">Online experience</a></dd>
         </div>
       </dl>
 
     </div>
     <p class="detail__text">
-    <strong>FjällRäven has noticed that they are still unknown to some of their target groups and so. Therefore, they want to set up a promotional action where a part of their gamma will be placed in the spotlight.</strong> We needed to create a fresh product website featuring a range of fascinating features. The user had to be well informed and driven to buy the product. We had to choose between 2 themes 'Back to school' and 'City Explorer'.<br/><br/>
+    <strong>The brief was to create a web application which combines a technology that we have seen in class and a technology which we didn't know yet. </strong>We could choose between the following technologies: Service Workers, web Mini, Web Audio, WebVR, Deep Learning / Machine Learning and asm.js.<br/>
+    My partner and I were fascinated by the Netflix series Stranger Things so we descided to do something with this theme. As we had it difficult to think of something to create with it, we knew we wanted to move the player to The Upside Down. As we thought further we came with the idea to create a VR experience of it using Three.js and WebVR. We worked 3 weeks on this concept to realise that this wasn't possible with only 2 weeks left. My partner and I went to see the teacher who convinced us to delete this and start all over with a new concept which included Machine Learning. <br /> <br />
+    Our new concept was that the player has to upload a panorama picture into the website and the website will turn your panorama picture into The Upside Down. Besides that, the player can view this picture in VR so he can look around. So with only two weeks left, we threw ourselfs into the world of Machine Learning and Deep Learning. At first it seemed impossible to make this in only two weeks but we went further and worked everyday from early in the morning till mostly midnight. We had some issues because we had to train our own style, namely The Upside Down style, with a neural network but our laptops' GPU wasn't strong enough. We contacted everyone we knew to find a GPU strong enough to train the style. Eventualy we found someone! The first try didn't work out, as this was only a week before the deadline, we became very stressed. Fortunately, the second time went well. It needed 10 hours to train the style but it was all worth it! <br /> <br />
+    Eventualy, we reached the deadline with a project were we are very proud of. It was a though project but those are the ones where I'm the proudest of! Feel free to check our project <a href="https://student.howest.be/nele.de.bruycker/20172018/EXW/" target="blank" >online </a>, WARNING the website is very havy so your laptop can get very hot!
 
-    I chose for the 'City Explorer' collection which included 2 backpacks and a totebag. For this collection I focused on people who like to go on a city trip, both men as women. <br/>After some research I found that these people wanted to know practical things about the bags, so I highlighted some features which are important for going on a citytrip. Like the safety of the tote bag, the flexibility, the weight...<br/><br/>
-    Besides the practical things of the bags, I wanted to implement a fun thing for the custumors of these bags. My idea was to create a platform where customers can upload a picture with there bag and add the place where they have been with their bag. Other people can see on a map where Fjällräven bags have been, plus I putted the numbers of how far Fjällräven has travelled with his customers.
     </p>
 
-    <img class="detail__img" src="/assets/img/04_fjallraven-detail01.png" alt="fjallraven home" />
-    <img class="detail__img" src="/assets/img/04_fjallraven-detail02.png" alt="fjallraven detail" />
+    <img class="detail__img" src="/assets/img/02_stranger-detail01.jpg" alt="stranger spaces" />
+    <iframe src="https://player.vimeo.com/video/249375178" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </main>
   <footer>
     &copy; Nele De Bruycker
