--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
     <section class="intro">
       <h1 class="intro__title">Hi, nice to meet you!</h1>
       <p class="intro__text">I’m Nele De Bruycker, product designer and developer at <a href="https://littlemissrobot.com/" target="blank" >Little Miss Robot.</a> <br />
-      Want to know more, <a href="/pages/about">read my full bio.</a> </p>
+      Want to know more, <a href="pages/about.html">read my full bio.</a> </p>
     </section>
     <section class="work">
 
