--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -23,7 +23,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <script>
   WebFontConfig = {
@@ -93,7 +93,7 @@
       </div>
       <div>
         <dt>Knowledge</dt>
-        <dd>My resume</dd>
+        <dd><a href="/assets/data/curriculum.pdf" target="blank">My resume</a></dd>
       </div>
     </dl>
 
